<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HTTP Shortcuts</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="edit_shortcut">Edit Shortcut</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="icon_description">Icon</string>
    <string name="label_name">Shortcut Name:</string>
    <string name="label_description">Description (optional):</string>
    <string name="label_url">URL:</string>
    <string name="create_button">Create</string>
    <string name="save_button">Save</string>
    <string name="test_button">Test</string>
    <string name="label_method">Method:</string>
    <string name="label_username">Authentication Username (optional):</string>
    <string name="label_password">Authentication Password (optional):</string>
    <string name="label_protocol">Protocol:</string>
    <string name="label_feedback">Feedback:</string>
    <string name="feedback_none">No feedback (run silently)</string>
    <string name="feedback_errors_only">Show errors only</string>
    <string name="feedback_simple">Show simple toast message</string>
    <string name="feedback_full_response">Show response in toast message</string>
    <string name="action_place">Place on home screen</string>
    <string name="action_run">Execute</string>
    <string name="action_edit">Edit</string>
    <string name="action_duplicate">Duplicate</string>
    <string name="action_delete">Delete</string>
    <string name="action_move_up">Move up</string>
    <string name="action_move_down">Move down</string>
    <string name="no_shortcuts">No shortcuts yet</string>
    <string name="confirm_delete_title">Confirm delete</string>
    <string name="confirm_delete_message">Do you really want to delete this shortcut?</string>
    <string name="confirm_discard_changes_title">Discard changes?</string>
    <string name="confirm_discard_changes_message">You have unsaved changes. Are you sure you want to leave?</string>
    <string name="title_activity_execute">Execute Shortcut</string>
    <string name="executed">%s executed.</string>
    <string name="shortcut_not_found">Shortcut not found. You might have to re-add it to the home screen.</string>
    <string name="validation_name_not_empty">Please enter a name.</string>
    <string name="validation_url_invalid">Please enter a valid HTTP(S) url.</string>
    <string name="error_http">%1$s failed with status code %2$d.</string>
    <string name="error_other">%1$s failed: %2$s</string>
    <string name="error_set_image">Failed to use image as icon.</string>
    <string name="copy">%1$s (copy)</string>
    <string name="choose_ipack">Choose an Ipack</string>
    <string name="change_icon">Change icon</string>
    <string name="choose_image">Choose custom image</string>
    <string name="choose_ipack_icon">Choose Ipack icon</string>
    <string name="choose_icon">Choose built-in icon</string>
    <string name="label_post_params">Parameters:</string>
    <string name="button_add_post_param">Add parameter</string>
    <string name="title_post_param_edit">Edit parameter</string>
    <string name="title_post_param_add">Add parameter</string>
    <string name="label_post_param_key">Parameter:</string>
    <string name="label_post_param_value">Value:</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_remove">Remove</string>
    <string name="label_custom_headers">Request Headers:</string>
    <string name="button_add_custom_header">Add header</string>
    <string name="title_custom_header_edit">Edit header</string>
    <string name="title_custom_header_add">Add header</string>
    <string name="label_custom_header_key">Header:</string>
    <string name="label_custom_header_value">Value:</string>
    <string name="label_custom_body">Body Content (optional):</string>
    <string name="settings">Settings</string>
    <string name="settings_title_basic">Basic settings</string>
    <string name="settings_click_behavior">Shortcut click action</string>
    <string name="settings_click_behavior_run">Execute the shortcut</string>
    <string name="settings_click_behavior_edit">Edit the shortcut</string>
    <string name="settings_click_behavior_menu">Show the options menu</string>
    <string name="settings_title_import_export">Import / Export</string>
    <string name="settings_import">Import shortcuts</string>
    <string name="settings_export">Export shortcuts</string>
    <string name="export_success_title">Shortcuts exported</string>
    <string name="export_success_message">Your shortcuts were successfully exported into \"%1$s\".\n\nPlease note that custom icons are not exported.</string>
    <string name="export_failed_title">Shortcuts exporting failed</string>
    <string name="export_failed_message">Your shortcuts could not be exported.</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="import_title">Import shortcuts</string>
    <string name="import_howto_message">To import shortcuts place your \"%1$s\" file at \"%2$s\".</string>
    <string name="import_warning_message">Shortcuts will be imported from \"%1$s\". Please note that all your current shortcuts will be lost.</string>
    <string name="import_failed_title">Import failed</string>
    <string name="import_failed_message">An error occurred while importing shortcuts. No changes were made.</string>
    <string name="import_success_title">Shortcuts imported</string>
    <string name="import_success_message_one">Successfully imported 1 shortcut.</string>
    <string name="import_success_message">Successfully imported %1$d shortcuts.</string>
    <string name="label_timeout">Timeout:</string>
    <string name="timeout_short">short (%1$d seconds)</string>
    <string name="timeout_medium">medium (%1$d seconds)</string>
    <string name="timeout_long">long (%1$d seconds)</string>
    <string name="timeout_very_long">very long (%1$d seconds)</string>
    <string name="settings_about">About this app</string>
    <string name="settings_version">Version number</string>
    <string name="settings_mail">Contact developer</string>
    <string name="settings_mail_summary">Questions, feature requests, other comments, …</string>
    <string name="settings_github">View on Github</string>
    <string name="settings_github_summary">That\'s right, this app is open-source</string>
    <string name="changelog_title_whats_new">What\'s new?</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_checkbox_show_at_startup">Show at startup</string>
    <string name="changelog_text"><![CDATA[
        <p>
			<b>Version 1.8.0</b><br>
			- Shortcut execution can be delayed when not connected to the internet<br>
			- Added <i>View in Play Store</i> button to preferences screen
		</p>
		<p>
			<b>Version 1.7.0</b><br>
			- Shortcuts can have different timeouts (3, 10, 30 or 60 seconds)<br>
			- Added <i>About</i> section to preferences screen<br>
			- Added <i>What\'s new</i> dialog<br>
			- Minor language improvements
		</p>
		<p>
			<b>Version 1.6.1</b><br>
			- Bugfixes
		</p>
		<p>
			<b>Version 1.6.0</b><br>
			- Custom headers<br>
			- Custom request body<br>
			- Preferences Screen<br>
			- Import & Export (new permissions needed)<br>
			- New request methods: <i>PUT</i>, <i>DELETE</i>, <i>PATCH</i><br>
			- Shortcuts can be tested before being saved<br>
			- Bugfixes
		</p>
		<p>
			<b>Version 1.5.0</b><br>
			- Possibility to add <i>POST</i> parameters<br>
			- More built-in icons, with improved selector dialog
		</p>
		<p>
			<b>Version 1.4.0</b><br>
			- Built-in icons<br>
			- Shortcuts can have descriptions for the overview screen<br>
			- Bugfix: Connections are no longer left idle after use
		</p>
		<p>
			<b>Version 1.2.0</b><br>
			- Added support for Ipack icons
		</p>
		<p>
			<b>Version 1.1.0</b><br>
			- Shortcuts can be moved up and down in the shortcut list<br>
			- Default click action executes the shortcuts instead of opening context menu<br>
			- Buttons moved into action bar<br>
			- Bugfixes
		</p>
]]></string>
<string name="execution_delayed">%1$s will execute once a connection to the internet is available.</string>
<string name="label_retry_policy">When not connected to the internet</string>
<string name="retry_policy_none">drop the request</string>
<string name="retry_policy_delayed">wait for connection</string>
<string name="settings_play_store">View in Play Store</string>
<string name="settings_play_store_summary">Thank you for your ratings and reviews</string>
<string name="shortcut_duplicated">%1$s duplicated.</string>
</resources>
